--- a/styles/layouts/cart.scss
+++ b/styles/layouts/cart.scss
@@ -193,14 +193,7 @@
 			margin-bottom: 12px;
 		}
 	}
-	&__place-btn {
-		width: 100%;
-		padding: 12px 24px;
-		border-radius: 32px;
-		border: 1px solid transparent;
-		background-color: #780096;
-		color: #fff;
-	}
+	// &__place-btn {}
 
 	&__form {
 		grid-area: form;
