--- a/style.scss
+++ b/style.scss
@@ -16,6 +16,7 @@
 
 // Components
 @import 'styles/components/breadcrumb';
+@import 'styles/components/buttons';
 @import 'styles/components/table';
 @import 'styles/components/radio';
 @import 'styles/components/pagination';
