--- a/styles/components/pagination.scss
+++ b/styles/components/pagination.scss
@@ -43,12 +43,12 @@
 		}
 	}
 
-	&__count {
-	}
+	// &__count {
+	// }
 
-	&__current {
-	}
+	// &__current {
+	// }
 
-	&__total {
-	}
+	// &__total {
+	// }
 }
