--- a/styles/layouts/catalog.scss
+++ b/styles/layouts/catalog.scss
@@ -41,6 +41,7 @@
 		background-color: #eeeff2;
 		outline: none;
 		border: 1px solid transparent;
+		white-space: nowrap;
 
 		&:hover,
 		&:focus-visible {
