--- a/styles/layouts/header.scss
+++ b/styles/layouts/header.scss
@@ -97,9 +97,17 @@
 		align-items: center;
 		gap: 4px;
 
+		svg {
+			fill: #fff;
+		}
+
 		&:hover,
 		&:active {
 			color: #780096;
+
+			svg {
+				fill: #780096;
+			}
 		}
 
 		&:focus-visible {
