--- a/styles/components/pagination.scss
+++ b/styles/components/pagination.scss
@@ -43,8 +43,11 @@
 		}
 	}
 
-	// &__count {
-	// }
+	&__info {
+		display: flex;
+		align-items: center;
+		gap: 4px;
+	}
 
 	// &__current {
 	// }
