fix scss files, add search, breadcrumbs, pagination

--- a/styles/base/default.scss
+++ b/styles/base/default.scss
@@ -1,5 +1,6 @@
 html {
 	position: relative;
+
 	box-sizing: border-box;
 }
 
@@ -11,27 +12,31 @@ html {
 
 body {
 	position: relative;
-	overflow-x: hidden;
-	min-width: 320px;
-	min-height: 100vh;
-	font-family: 'Open Sans', sans-serif;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	text-rendering: optimizeLegibility;
-	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-	-webkit-tap-highlight-color: transparent;
-	font-size: 12px;
-	line-height: 1.2;
-	color: #1c1c1c;
-	background-color: #fff;
+
 	display: flex;
 	flex-direction: column;
+	min-width: 320px;
+	min-height: 100vh;
+	overflow-x: hidden;
+
+	color: #1c1c1c;
+	font-size: 12px;
+	font-family: 'Open Sans', sans-serif;
+	line-height: 1.2;
+
+	background-color: #fff;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	text-rendering: optimizelegibility;
+	-webkit-tap-highlight-color: rgb(0 0 0 / 0%);
+	-webkit-tap-highlight-color: transparent;
 }
 
 main {
 	flex-grow: 1;
 	padding-bottom: 80px;
-	@media (min-width: 580px) {
+
+	@media (width >= 580px) {
 		padding-bottom: 100px;
 	}
 }
@@ -49,20 +54,22 @@ svg {
 
 button {
 	padding: 0;
-	cursor: pointer;
-	border: none;
+
 	background-color: transparent;
+	border: none;
+	cursor: pointer;
 }
 
 a {
-	text-decoration: none;
 	color: inherit;
+	text-decoration: none;
 }
 
 ul {
-	list-style: none;
-	padding: 0;
 	margin: 0;
+	padding: 0;
+
+	list-style: none;
 }
 
 h1,
@@ -76,23 +83,24 @@ fieldset {
 
 .visually-hidden {
 	position: fixed;
+
 	transform: scale(0);
 }
 
 .container {
 	max-width: 1440px;
-	padding: 0 16px;
 	margin: 0 auto;
+	padding: 0 16px;
 
-	@media (min-width: 580px) {
+	@media (width >= 580px) {
 		padding: 0 29px;
 	}
 
-	@media (min-width: 820px) {
+	@media (width >= 820px) {
 		padding: 0 43px;
 	}
 
-	@media (min-width: 1120px) {
+	@media (width >= 1120px) {
 		padding: 0 92px;
 	}
 }
