--- a/styles/layouts/catalog.scss
+++ b/styles/layouts/catalog.scss
@@ -1,12 +1,12 @@
 .catalog {
-	overflow-x: hidden;
 	padding-top: 24px;
+	overflow-x: hidden;
 
-	@media (min-width: 580px) {
+	@media (width >= 580px) {
 		padding-top: 32px;
 	}
 
-	@media (min-width: 820px) {
+	@media (width >= 820px) {
 		padding-top: 40px;
 	}
 
@@ -15,43 +15,47 @@
 	}
 
 	&__list {
-		overflow-x: auto;
-		padding: 0 16px;
 		display: flex;
 		gap: 16px;
+		padding: 0 16px;
+		overflow-x: auto;
 
-		@media (min-width: 580px) {
+		@media (width >= 580px) {
 			padding: 0 29px;
 		}
 
-		@media (min-width: 820px) {
+		@media (width >= 820px) {
 			padding: 0 49px;
 		}
 
-		@media (min-width: 1120px) {
+		@media (width >= 1120px) {
 			padding: 0 92px;
 		}
 	}
 
 	&__link {
 		display: block;
-		padding: 8px 14px 10px 14px;
-		border-radius: 32px;
+		padding: 8px 14px 10px;
+
 		color: #969eae;
-		background-color: #eeeff2;
-		outline: none;
-		border: 1px solid transparent;
 		white-space: nowrap;
+
+		background-color: #eeeff2;
+		border: 1px solid transparent;
+		border-radius: 32px;
+		outline: none;
 
 		&:hover,
 		&:focus-visible {
-			border-color: #780096;
 			color: #780096;
+
+			border-color: #780096;
 		}
 
 		&:active,
 		&_active {
 			color: #fff;
+
 			background-color: #780096;
 
 			&:hover,
@@ -65,12 +69,12 @@
 		}
 	}
 
-	@media (min-width: 580px) {
+	@media (width >= 580px) {
 	}
 
-	@media (min-width: 820px) {
+	@media (width >= 820px) {
 	}
 
-	@media (min-width: 1120px) {
+	@media (width >= 1120px) {
 	}
 }
