--- a/styles/layouts/footer.scss
+++ b/styles/layouts/footer.scss
@@ -1,9 +1,11 @@
 .footer {
-	background-color: #1c1c1c;
-	color: #f1e9e4;
 	padding: 32px 0 40px;
 
-	@media (min-width: 820px) {
+	color: #f1e9e4;
+
+	background-color: #1c1c1c;
+
+	@media (width >= 820px) {
 		padding-top: 40px;
 	}
 
@@ -12,12 +14,12 @@
 		flex-direction: column;
 		gap: 24px;
 
-		@media (min-width: 580px) {
+		@media (width >= 580px) {
 			display: grid;
 			grid-template-columns: 1fr 1fr;
 		}
 
-		@media (min-width: 820px) {
+		@media (width >= 820px) {
 			gap: 32px;
 		}
 	}
@@ -25,24 +27,24 @@
 	&__logo {
 		width: 230px;
 
-		@media (min-width: 580px) {
+		@media (width >= 580px) {
 			grid-column: 1/2;
 		}
 
-		@media (min-width: 820px) {
+		@media (width >= 820px) {
 			width: 331px;
 		}
 	}
 
 	&__contacts {
-		@media (min-width: 580px) {
+		@media (width >= 580px) {
 			grid-column: 2/3;
 			justify-self: end;
 		}
 	}
 
 	&__developer-list {
-		@media (min-width: 580px) {
+		@media (width >= 580px) {
 			grid-column: 1/2;
 		}
 	}
@@ -56,7 +58,7 @@
 	}
 
 	&__copyright {
-		@media (min-width: 580px) {
+		@media (width >= 580px) {
 			grid-column: 1/2;
 		}
 	}
