--- a/styles/layouts/form-order.scss
+++ b/styles/layouts/form-order.scss
@@ -3,19 +3,20 @@
 	grid-template-columns: 1fr;
 	gap: 16px;
 
-	@media (min-width: 580px) {
-		gap: 10px 16px;
+	@media (width >= 580px) {
 		grid-template-columns: 230px 230px 1fr;
+		gap: 10px 16px;
 	}
 
-	@media (min-width: 820px) {
-		gap: 24px 16px;
+	@media (width >= 820px) {
 		grid-template-columns: 196px 196px 1fr;
+		gap: 24px 16px;
 	}
 
 	&__fieldset {
-		padding: 0;
 		margin: 0;
+		padding: 0;
+
 		border: 0;
 
 		&-input {
@@ -23,15 +24,15 @@
 			grid-template-columns: 1fr;
 			gap: 8px;
 
-			@media (min-width: 580px) {
+			@media (width >= 580px) {
 				grid-column: 1/-1;
 				grid-template-columns: 1fr 1fr;
 				gap: 10px;
 			}
 
-			@media (min-width: 880px) {
-				max-width: 832px;
+			@media (width >= 880px) {
 				gap: 16px;
+				max-width: 832px;
 			}
 		}
 
@@ -43,12 +44,13 @@
 	}
 
 	&__input {
-		border-radius: 4px;
-		background-color: #eeeff2;
-		padding: 0 14px;
 		width: 100%;
 		height: 38px;
+		padding: 0 14px;
+
+		background-color: #eeeff2;
 		border: none;
+		border-radius: 4px;
 
 		&::placeholder {
 			color: #969eae;
@@ -58,22 +60,25 @@
 	&__textarea {
 		min-height: 120px;
 		padding: 12px 14px;
-		border-radius: 4px;
+
 		background-color: #eeeff2;
 		border: none;
+		border-radius: 4px;
+
 		resize: vertical;
 
 		&::placeholder {
 			color: #969eae;
 		}
 
-		@media (min-width: 580px) {
+		@media (width >= 580px) {
 			grid-column: 1/-1;
 		}
 	}
 
 	&__legend {
-		font-size: 16px;
 		margin-bottom: 12px;
+
+		font-size: 16px;
 	}
 }
