--- a/styles/layouts/goods.scss
+++ b/styles/layouts/goods.scss
@@ -1,46 +1,49 @@
 .goods {
 	padding-top: 24px;
-	@media (min-width: 580px) {
+
+	@media (width >= 580px) {
 	}
 
-	@media (min-width: 820px) {
+	@media (width >= 820px) {
 	}
 
 	&__title {
-		font-size: 24px;
-		font-weight: 700;
 		margin-bottom: 24px;
 
-		@media (min-width: 580px) {
+		font-weight: 700;
+		font-size: 24px;
+
+		@media (width >= 580px) {
 			margin-bottom: 32px;
+
 			font-size: 32px;
 		}
 
-		@media (min-width: 820px) {
+		@media (width >= 820px) {
 			margin-bottom: 40px;
 		}
 	}
 
 	&__list {
 		display: grid;
-		gap: 50px 8px;
-		justify-content: space-evenly;
 		grid-template-columns: repeat(auto-fit, 140px);
+		gap: 50px 8px;
+		// justify-content: space-evenly;
 		margin-bottom: 32px;
 
 		&:last-child {
 			margin-bottom: 0;
 		}
 
-		@media (min-width: 580px) {
-			gap: 65px 10px;
+		@media (width >= 580px) {
 			grid-template-columns: repeat(auto-fit, 230px);
+			gap: 65px 10px;
 			margin-bottom: 40px;
 		}
 
-		@media (min-width: 820px) {
-			gap: 81px 16px;
+		@media (width >= 820px) {
 			grid-template-columns: repeat(auto-fit, 302px);
+			gap: 81px 16px;
 		}
 	}
 }
