--- a/styles/layouts/product.scss
+++ b/styles/layouts/product.scss
@@ -1,16 +1,16 @@
 .product {
 	padding-top: 24px;
 
-	@media (min-width: 580px) {
+	@media (width >= 580px) {
 		padding-top: 28px;
 	}
 
-	@media (min-width: 820px) {
+	@media (width >= 820px) {
 		padding-top: 40px;
 	}
 
 	&__container {
-		@media (min-width: 820px) {
+		@media (width >= 820px) {
 			display: grid;
 			grid-template-columns: 66% 1fr;
 			gap: 40px 16px;
@@ -18,15 +18,16 @@
 	}
 
 	&__title {
-		font-size: 24px;
-		font-weight: 700;
 		margin-bottom: 24px;
 
-		@media (min-width: 580px) {
+		font-weight: 700;
+		font-size: 24px;
+
+		@media (width >= 580px) {
 			font-size: 32px;
 		}
 
-		@media (min-width: 820px) {
+		@media (width >= 820px) {
 			grid-column: 1/-1;
 			margin-bottom: 0;
 		}
@@ -35,11 +36,11 @@
 	&__picture {
 		margin-bottom: 32px;
 
-		@media (min-width: 580px) {
+		@media (width >= 580px) {
 			margin-bottom: 40px;
 		}
 
-		@media (min-width: 820px) {
+		@media (width >= 820px) {
 			grid-column: 1/2;
 			margin-bottom: 0;
 		}
@@ -47,29 +48,31 @@
 
 	&__slider-main {
 		position: relative;
+
 		width: 100%;
 		height: 74vw;
 		max-height: 688px;
 
-		@media (min-width: 580px) {
-			margin-bottom: 14px;
+		@media (width >= 580px) {
 			height: 92vw;
+			margin-bottom: 14px;
 		}
 
-		@media (min-width: 820px) {
+		@media (width >= 820px) {
 			height: 60vw;
 		}
 
-		@media (min-width: 1120px) {
+		@media (width >= 1120px) {
 			height: 48vw;
 		}
 	}
 
 	&__slide {
 		display: flex;
-		justify-content: center;
 		align-items: center;
+		justify-content: center;
 		overflow: hidden;
+
 		border-radius: 16px;
 	}
 
@@ -82,30 +85,31 @@
 	&__slider-thumbnails {
 		display: none !important;
 
-		@media (min-width: 580px) {
+		@media (width >= 580px) {
 			display: block !important;
 			height: 22vw;
 			max-height: 138px;
 		}
 
-		@media (min-width: 820px) {
+		@media (width >= 820px) {
 			height: 12vw;
 			max-height: 120px;
 		}
 
-		@media (min-width: 820px) {
+		@media (width >= 820px) {
 			height: 12vw;
 			max-height: 120px;
 		}
 
-		@media (min-width: 1120px) {
+		@media (width >= 1120px) {
 			max-height: 162px;
 		}
 	}
 
 	&__thumbnails-slide {
-		border-radius: 16px;
 		overflow: hidden;
+
+		border-radius: 16px;
 	}
 
 	&__thumbnails-img {
@@ -115,28 +119,31 @@
 	}
 
 	&__info {
-		@media (min-width: 820px) {
+		@media (width >= 820px) {
 			grid-column: 2/3;
 		}
 	}
 
 	&__price {
-		font-size: 20px;
 		margin-bottom: 12px;
+
+		font-size: 20px;
 	}
 
 	&__article {
 		display: inline-block;
-		padding: 4px 8px;
-		border-radius: 32px;
-		background-color: #eeeff2;
 		margin-bottom: 24px;
+		padding: 4px 8px;
+
+		background-color: #eeeff2;
+		border-radius: 32px;
 	}
 
 	&__characteristics-title {
-		font-size: 16px;
-		font-weight: 400;
 		margin-bottom: 4px;
+
+		font-weight: 400;
+		font-size: 16px;
 	}
 
 	&__characteristics-table {
@@ -145,8 +152,8 @@
 
 	&__btns {
 		display: flex;
-		align-items: center;
 		gap: 12px;
+		align-items: center;
 	}
 
 	&__btn {
@@ -156,19 +163,42 @@
 	&__like {
 		width: 16px;
 		height: 16px;
+
+		svg {
+			fill: #fff;
+		}
+
+		&:hover,
+		&_active {
+			color: #780096;
+
+			svg {
+				fill: #780096;
+			}
+		}
+
+		&:active {
+			color: #c0f;
+
+			svg {
+				fill: #c0f;
+			}
+		}
 	}
 
 	&__arrow {
 		position: absolute;
-		z-index: 10;
 		top: 50%;
-		transform: translateY(-50%);
+		z-index: 10;
+
 		width: 32px;
+
+		transform: translateY(-50%);
 
 		&-next {
 			right: 16px;
 
-			@media (min-width: 580px) {
+			@media (width >= 580px) {
 				right: 24px;
 			}
 		}
@@ -176,7 +206,7 @@
 		&-prev {
 			left: 16px;
 
-			@media (min-width: 580px) {
+			@media (width >= 580px) {
 				left: 24px;
 			}
 		}
