--- a/styles/layouts/form-order.scss
+++ b/styles/layouts/form-order.scss
@@ -19,7 +19,7 @@
 
 		border: 0;
 
-		&-input {
+		&_input {
 			display: grid;
 			grid-template-columns: 1fr;
 			gap: 8px;
@@ -36,10 +36,10 @@
 			}
 		}
 
-		&-radio {
+		&_radio {
 			display: flex;
 			flex-direction: column;
-			align-items: start;
+			align-items: flex-start;
 		}
 	}
 
@@ -54,6 +54,10 @@
 
 		&::placeholder {
 			color: #969eae;
+		}
+
+		&:disabled {
+			opacity: 0.5;
 		}
 	}
 
